# PureEdgeVLM

./: .gitignore  README.md  build_ncnn_android.sh  gradle.properties  local.properties  notes.md  recognition_bench_parallel.csv  recognition_bench_serial.csv  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/topaz/pureedgevlm/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  image_util.cpp  image_util.h  llm_engine.cpp  llm_engine.h  native-lib.cpp  native_bridge.cpp  opencv_omp_shim.cpp  scene_classifier.cpp  scene_classifier.h  yolo_detector.cpp  yolo_detector.h
app/src/main/cpp/ocr/: ppocrv5.cpp  ppocrv5.h
app/src/main/java/com/topaz/pureedgevlm/: BenchmarkActivity.kt  CameraActivity.kt  GuiKit.kt  ImageActivity.kt  MainActivity.kt  NativeBridge.kt  Nav.kt  OverlayView.kt  SceneResult.kt  Settings.kt  SettingsActivity.kt  YoloBox.kt
app/src/main/res/drawable/: ic_gear.xml  ic_mic.xml  ic_mic_on.xml  ic_trash.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/topaz/pureedgevlm/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
models_workspace/: benchmark.csv  benchmark.md  benchmark_res.csv  benchmark_res.md  benchmark_to_markdown.py  recognition_bench_compare.md  recognition_bench_to_markdown.py  test_llm.py  test_ocr.py  test_scene.py  test_yolo.py  test_yolo11s_onnx.py
models_workspace/places365/: check_model.py  export_resnet50_places365_to_onnx.py  predict_golden_direct224.py  predict_places365.py  verify_resnet50_onnx.py  对照_scene.py
models_workspace/yolo11n_ncnn_model/: metadata.yaml
